Setup for tshoji demo

--- a/Notebook/routing_setup.ipynb
+++ b/Notebook/routing_setup.ipynb
@@ -9,10 +9,10 @@
     "resultHeight": 115
    },
    "source": [
-    "# USING A ROUTE OPTIMIZATION NATIVE APP WITH AISQL\n",
+    "# AISQLでルート最適化ネイティブアプリの使用\n",
     "\n",
     "\n",
-    "Using Cortex with  either the open route optimization service **API** or self contained **Native App**"
+    "オープンルート最適化サービス**API**または自己完結型**ネイティブアプリ**のいずれかでCortexを使用"
    ]
   },
   {
@@ -24,13 +24,13 @@
     "resultHeight": 88
    },
    "source": [
-    "#### 1.  Simple Directions - allows simple directions from one point to another.\n",
-    "You can load multiple start/end points to get directions for multiple places). You also need to specify the method such as driving-car.  This function is leveraging a GET request from the api.  You will note that the function is written in python - the service itself has handy python snippets to help curate the function.  \n",
-    "click [here](https://openrouteservice.org/dev/#/api-docs/v2/directions/{profile}/post) to navigate to the directions service playground\n",
+    "#### 1. シンプルなルート案内 - ある地点から別の地点への簡単なルート案内を可能にします。\n",
+    "複数の開始/終了地点をロードして、複数の場所へのルート案内を取得できます）。また、driving-carなどの方法を指定する必要があります。この機能はAPIからのGETリクエストを活用しています。関数がPythonで書かれていることがわかります。サービス自体には、関数をキュレーションするのに役立つ便利なPythonスニペットがあります。\n",
+    "[こちら](https://openrouteservice.org/dev/#/api-docs/v2/directions/{profile}/post)をクリックして、ルート案内サービスのプレイグラウンドに移動してください\n",
     "\n",
-    "I have decided to use the **AI_COMPLETE** function with **Anthropic LLM** -  **Claude** to provide an array of values which contain one nice hotel and one nice restaurant in **New York City**.\n",
+    "**ニューヨーク市**の素敵なホテル1つと素敵なレストラン1つを含む値の配列を提供するために、**Anthropic LLM** - **Claude**で**AI_COMPLETE**関数を使用することにしました。\n",
     "\n",
-    "In the following cell, indicate which functions you will be using.  If you are using functions from the native app, choose **OPENROUTESERVICE_NATIVE_APP**.  If you are using the external integration api calls, choose **VEHICLE_ROUTING_SIMULATOR**."
+    "次のセルで、使用する関数を指定してください。ネイティブアプリの関数を使用している場合は、**OPENROUTESERVICE_NATIVE_APP**を選択してください。外部統合API呼び出しを使用している場合は、**VEHICLE_ROUTING_SIMULATOR**を選択してください。"
    ]
   },
   {
@@ -43,17 +43,15 @@
    },
    "outputs": [],
    "source": [
-    "#database = 'OPENROUTESERVICE_NATIVE_APP'\n",
-    "database = 'VEHICLE_ROUTING_SIMULATOR'\n",
+    "database = 'OPENROUTESERVICE_NATIVE_APP'\n",
+    "# database = 'VEHICLE_ROUTING_SIMULATOR'\n",
     "\n",
-    "# populate the above with either the native app name or the database which \n",
-    "# holds the api functions.  This is called VEHICLE_ROUTING_SIMULATOR\n",
-    "# If testing locally, the app name is called OPENROUTESERVICE_NATIVE_APP\n",
+    "# ネイティブアプリの名前か、api関数を保持するデータベースを上記に入力\n",
+    "# これは VEHICLE_ROUTING_SIMULATOR と呼ばれるデータベースです\n",
+    "# ローカルでテストする場合、アプリ名は OPENROUTESERVICE_NATIVE_APP と呼ばれます\n",
     "\n",
-    "## Add your secret if you are using the API\n",
-    "\n",
-    "##ALTER SECRET VEHICLE_ROUTING_SIMULATOR.CORE.ROUTING_TOKEN SET SECRET_STRING = 'secret for open route service';\n",
-    "\n"
+    "## APIを使用する場合は、シークレットを追加してください\n",
+    "## ALTER SECRET VEHICLE_ROUTING_SIMULATOR.CORE.ROUTING_TOKEN SET SECRET_STRING = 'secret for open route service';"
    ]
   },
   {
@@ -64,7 +62,7 @@
     "name": "head_directions_simp"
    },
    "source": [
-    "Firstly we will generate some data used to call the directions service"
+    "まず、ルート案内サービスを呼び出すために使用するデータを生成します"
    ]
   },
   {
@@ -104,7 +102,7 @@
     "name": "simp_directions_run"
    },
    "source": [
-    "You will now use this data to call the directions function.  The function expects a string for the vehicle profile, and a variant for the start and end point"
+    "このデータを使用してルート案内関数を呼び出します。この関数は、車両プロファイルに文字列を、開始点と終了点にvariantを期待しています"
    ]
   },
   {
@@ -144,9 +142,9 @@
     "name": "heading_example_pydeck"
    },
    "source": [
-    "## Cortex Generated Map\n",
+    "## Cortex生成マップ\n",
     "\n",
-    "I will now introduce you to the **pydeck** library.  This library allows you to visualise multiple map layers which can include polygons,linestrings and points."
+    "**pydeck**ライブラリを紹介します。このライブラリでは、ポリゴン、ラインストリング、ポイントを含む複数のマップレイヤーを視覚化できます。"
    ]
   },
   {
@@ -208,12 +206,12 @@
     "resultHeight": 88
    },
    "source": [
-    "## Advanced directions - create routes which include multiple way points. \n",
-    "Although the function above is nice and simple for directions that stops at only one place, vehicle route plans that contain multiple drop offs will need to effectively 'detour' between the starting point and destination.  This is where we utilise **way points**.\n",
+    "## 高度なルート案内 - 複数のウェイポイントを含むルートを作成します。\n",
+    "上記の関数は1つの場所にのみ停止するルート案内には良いシンプルなものですが、複数の立ち寄り先を含む車両ルート計画では、出発地と目的地の間で効果的に「迂回」する必要があります。ここで**ウェイポイント**を活用します。\n",
     "\n",
-    "Each stop is loaded into one array.  You also need to specify the method such as driving-car.  This type of api uses a PUT request - you will see how this is articulated in the code below.\n",
+    "各停車地は1つの配列にロードされます。また、driving-carなどの方法を指定する必要があります。このタイプのAPIはPUTリクエストを使用します。これがどのように以下のコードで表現されているかを確認できます。\n",
     "\n",
-    "Lets now take you through calling the service which pushes in multiple way points.  Firstly, you will create a series of waypoints in an array.  Python is a great way to inject array variables into our sql function via a notebook for testing purposes."
+    "複数のウェイポイントを送信するサービスの呼び出しについて説明します。まず、配列内に一連のウェイポイントを作成します。Pythonは、テスト目的でノートブック経由でSQL関数に配列変数を注入する優れた方法です。"
    ]
   },
   {
@@ -261,7 +259,7 @@
     "name": "head_run_advanced_directions"
    },
    "source": [
-    "We will now run the function to include multiple way points"
+    "複数のウェイポイントを含む関数を実行します"
    ]
   },
   {
@@ -295,8 +293,8 @@
     "name": "visualise_head"
    },
    "source": [
-    "## VISUALISE MULTI LAYERS\n",
-    "We will now visualise the the directions with way points again using pydeck.  This incorporates two layers - one for the line string and the second for each way point "
+    "## マルチレイヤーの可視化\n",
+    "pydeckを使用してウェイポイント付きのルート案内を再度可視化します。これは2つのレイヤーを組み込みます。1つはラインストリング用、もう1つは各ウェイポイント用です。"
    ]
   },
   {
@@ -387,11 +385,11 @@
     "resultHeight": 88
    },
    "source": [
-    "## ROUTE OPTIMIZATION FUNCTION\n",
+    "## ルート最適化関数\n",
     "\n",
     "  \n",
     "\n",
-    "If you know the jobs and know what vehicles are availalble, whats the most optimal way of getting the goods/services there??"
+    "ジョブが分かっていて利用可能な車両も分かっている場合、商品/サービスをそこに届ける最も最適な方法は何でしょうか？"
    ]
   },
   {
@@ -431,8 +429,8 @@
     "name": "head_job_template"
    },
    "source": [
-    "## CREATE A JOB AND VEHICLE TEMPLATE TO HELP CORTEX SIMULATE JOBS AND AVALABLE VEHICLES\n",
-    "Below is a sample format for the jobs and vehicles and is an illustration of what the optimization service expects."
+    "## CORTEXがジョブと利用可能な車両をシミュレートするためのジョブと車両テンプレートを作成\n",
+    "以下はジョブと車両のサンプル形式で、最適化サービスが期待するものの例です。"
    ]
   },
   {
@@ -529,7 +527,7 @@
     "name": "create_synthetic_jobs_and_vehicle"
    },
    "source": [
-    "We will now create a synthetic vehicle as well as 10 delivery jobs that this vehicle needs to cover in New York.  We are specifying Structured json to generate the jobs and vehicle"
+    "ニューヨークでこの車両がカバーする必要がある10の配送ジョブと合成車両を作成します。ジョブと車両を生成するために構造化JSONを指定しています"
    ]
   },
   {
@@ -602,8 +600,8 @@
     "name": "head_test_function"
    },
    "source": [
-    "## PUT THE JOBS AND VEHICLES THROUGH THE ROUTE OPTIMIZATION SERVICE\n",
-    "Let's now put the jobs through the route optimization service"
+    "## ジョブと車両をルート最適化サービスに投入\n",
+    "ジョブをルート最適化サービスに投入しましょう"
    ]
   },
   {
@@ -644,9 +642,9 @@
     "name": "head_look_at_json"
    },
    "source": [
-    "Let's now have a look at the json object. You will see that the array object is broken down into routes.  Each route will be assigned a vehicle and that vehicle will be allocated delivery locations and times.  There will also be infomation about the duration and may include details such as waiting times.\n",
+    "JSONオブジェクトを見てみましょう。配列オブジェクトがルートに分解されているのがわかります。各ルートには車両が割り当てられ、その車両には配送場所と時間が割り当てられます。また、持続時間に関する情報も含まれ、待機時間などの詳細も含まれる場合があります。\n",
     "\n",
-    "If you used the native app, it will include a geometry object which gives you an array of every point for each route.  You will not see this if you use the external api calls.  However, you can still achieve similar results by using the directions function for each route."
+    "ネイティブアプリを使用した場合、各ルートのすべてのポイントの配列を提供するジオメトリオブジェクトが含まれます。外部API呼び出しを使用する場合、これは表示されません。ただし、各ルートにルート案内関数を使用することで、同様の結果を得ることができます。"
    ]
   },
   {
@@ -672,11 +670,11 @@
     "name": "heading_dropoffs"
    },
    "source": [
-    "View the step line and the directions line with the points on a map.\n",
+    "マップ上でポイントとともにステップラインとルート案内ラインを表示します。\n",
     "\n",
-    "**Note** If you are using the functions from an api, the code below will call the directions api to get the line for route path.  The native app provides this as part of the optimization api.\n",
+    "**注意** APIの関数を使用している場合、以下のコードはルートパスのラインを取得するためにルート案内APIを呼び出します。ネイティブアプリは、これを最適化APIの一部として提供しています。\n",
     "\n",
-    "You will see logic in the code to call the directions service if no geometry data is provided by the optimization service."
+    "最適化サービスでジオメトリデータが提供されない場合に、ルート案内サービスを呼び出すロジックがコード内に表示されます。"
    ]
   },
   {
@@ -839,8 +837,8 @@
     "name": "head_multi_vehicles"
    },
    "source": [
-    "## Multiple Vehicles \n",
-    "we will modify the data to have more jobs so now more vehicles are needed.  Firstly, let's create some quick sample data for 50 customers in New York City"
+    "## 複数の車両\n",
+    "より多くのジョブを持つようにデータを変更するため、より多くの車両が必要になります。まず、ニューヨーク市の50人の顧客に対する簡単なサンプルデータを作成しましょう"
    ]
   },
   {
@@ -856,16 +854,14 @@
     "-- Create or replace the 'customers' table\n",
     "CREATE OR REPLACE TABLE sample_customers AS\n",
     "SELECT\n",
-    "    -- Generate a unique customer ID using ROW_NUMBER()\n",
+    "    -- ROW_NUMBER() を使って一意の顧客IDを生成\n",
     "    ROW_NUMBER() OVER (ORDER BY customer_data.index) AS ID,\n",
-    "    -- Extract the name from the flattened customer object\n",
+    "\n",
+    "    -- フラット化した顧客オブジェクトから名前、住所、メールアドレス、緯度、経度を抽出\n",
     "    customer_data.value:name::TEXT AS name,\n",
-    "    -- Extract the address from the flattened customer object\n",
     "    customer_data.value:address::TEXT AS address,\n",
     "    customer_data.value:email::TEXT AS email,\n",
-    "    -- Extract the latitude from the flattened customer object, casting to float\n",
     "    customer_data.value:latitude::FLOAT AS lat,\n",
-    "    -- Extract the longitude from the flattened customer object, casting to float\n",
     "    customer_data.value:longitude::FLOAT AS lon\n",
     "FROM\n",
     "    (\n",
@@ -919,7 +915,7 @@
     "name": "put_restaurant_and_orders_in_objects"
    },
    "source": [
-    "You will now create an object for all the drop offs and an object for the starting location which is the Restaurant"
+    "すべてのドロップオフ用のオブジェクトとレストランである開始場所用のオブジェクトを作成します"
    ]
   },
   {
@@ -950,7 +946,7 @@
     "name": "simulate_multi_vehicle_jobs"
    },
    "source": [
-    "Now lets generate the Jobs and vehicles"
+    "ジョブと車両を生成しましょう"
    ]
   },
   {
@@ -963,10 +959,10 @@
    },
    "outputs": [],
    "source": [
-    "number_of_vehicles = 3  #the optimization api service has a maximum of 3 vehicles. \n",
-    "## Try 5 if running the native app.\n",
+    "# number_of_vehicles = 3  # 最適化APIサービスの最大車両数は3\n",
     "\n",
-    "#number_of_vehicles = 5"
+    "## ネイティブアプリを実行する場合は5に変更\n",
+    "number_of_vehicles = 5"
    ]
   },
   {
@@ -1037,7 +1033,7 @@
     "name": "head_view_vehicles_jobs"
    },
    "source": [
-    "Lets now expand the jobs and vehicles so we can see what has been created."
+    "作成されたものを確認できるよう、ジョブと車両を展開しましょう。"
    ]
   },
   {
@@ -1075,7 +1071,7 @@
     "name": "vehicle_optimization"
    },
    "source": [
-    "You will now run the optimization service based on these jobs and available vehicles.  Again, having the geometry field present will depend on whether you chose to use the native app or the external integration api functions."
+    "これらのジョブと利用可能な車両に基づいて最適化サービスを実行します。ジオメトリフィールドの存在は、ネイティブアプリを使用するか外部統合API関数を使用するかの選択に依存します。"
    ]
   },
   {
@@ -1102,7 +1098,7 @@
     "name": "cell1"
    },
    "source": [
-    "this sql runs the directions service if there is no geometry provided.  If the native app is used, this part will be skipped."
+    "このSQLは、ジオメトリが提供されていない場合にルート案内サービスを実行します。ネイティブアプリを使用している場合、この部分はスキップされます。"
    ]
   },
   {
@@ -1257,10 +1253,10 @@
     "resultHeight": 47
    },
    "source": [
-    "## Isochrone Function.  \n",
-    "This is to create a polygon which creates a catchment boundary based on how long it would take to get there.  Orders may only be accepted if you can fullfill them based on how quickly drivers can get anywhere within a given timeframe.  Isochrones could be utilised for other usecases outside of route optimization such as market analysis in a given catchment.\n",
+    "## アイソクロン関数\n",
+    "これは、そこに到達するのにかかる時間に基づいて集客境界を作成するポリゴンを作成するためのものです。注文は、指定された時間枠内でドライバーがどこまで迅速に到達できるかに基づいて履行できる場合にのみ受け入れられます。アイソクロンは、特定の集客における市場分析など、ルート最適化以外の他の用途でも活用できます。\n",
     "\n",
-    "The function is then tested by focussing on a specific point.  It will generate a polygon which represents everywhere a driver can get to within a 20 minute timeframe."
+    "関数は、特定のポイントに焦点を当てることでテストされます。20分の時間枠内でドライバーが到達できるすべての場所を表すポリゴンが生成されます。"
    ]
   },
   {
@@ -1324,7 +1320,7 @@
     "name": "heading_view_iscochrone"
    },
    "source": [
-    "This is an example of what an isochrone looks like in pydeck."
+    "これは、pydeckでアイソクロンがどのように見えるかの例です。"
    ]
   },
   {
@@ -1407,11 +1403,11 @@
     "name": "optimal_base_table"
    },
    "source": [
-    "## CARTO OVERTURE MAPS PLACES DATA FOR NEW YORK\n",
+    "## ニューヨーク向けCARTO OVERTURE MAPS PLACESデータ\n",
     "\n",
-    "Create a base table with search optimization to filter quickly on categories and geographies\n",
+    "カテゴリと地理に基づいて迅速にフィルタリングするための検索最適化を備えたベーステーブルを作成\n",
     "\n",
-    "Here we are using the places dataset which is provided by carto overture maps.  We are copying the data to add search optimization on the categories of place as well as the geography.  We will be leveraging the 'Search' function in the app to search through columns that may be relevant to the selected industry."
+    "ここでは、carto overture mapsが提供するplacesデータセットを使用しています。場所のカテゴリと地理に検索最適化を追加するためにデータをコピーしています。アプリの「検索」機能を活用して、選択された業界に関連する可能性のある列を検索します。"
    ]
   },
   {
@@ -1525,7 +1521,7 @@
     "name": "scatter_head"
    },
    "source": [
-    "Here, we are using the Scatter Plot layer to only view places by the isochrone "
+    "ここでは、アイソクロンによって場所のみを表示するためにScatter Plotレイヤーを使用しています"
    ]
   },
   {
@@ -1627,8 +1623,8 @@
     "name": "heading_base_data"
    },
    "source": [
-    "## Create Base Data Table for App\n",
-    "Now we will focus on putting components together for a streamlit application.  We are aiming to create a dynamic routing analyser.  For this, we will need to generate jobs, vehicles and depots based on any location in the world.  Carto overture maps will help as it contains points of interests anywhere in the world. Cortex complete is also used for a simple 'geocoding' mechanism where a user will type in a key word and cortex will generate the coordinates that matches what central location the user wants to base the routing against"
+    "## アプリ用ベースデータテーブルの作成\n",
+    "streamlitアプリケーション用にコンポーネントを組み合わせることに焦点を当てます。動的ルーティングアナライザーを作成することを目指しています。これには、世界中の任意の場所に基づいてジョブ、車両、デポを生成する必要があります。Carto overture mapsは世界中の興味のあるポイントを含んでいるため役立ちます。Cortex completeは、ユーザーがキーワードを入力し、cortexがユーザーがルーティングのベースにしたい中心地に一致する座標を生成するシンプルな「ジオコーディング」メカニズムとしても使用されます"
    ]
   },
   {
@@ -1639,8 +1635,8 @@
     "name": "heading_job_template"
    },
    "source": [
-    "#### 1. Job Template\n",
-    "This template will be used to simulate jobs.  You can change the base values in this notebook - which will effect what sample jobs will be generated.  This template generates a sample of 29 jobs.  The location of these jobs and industry will be dynamic and depends on user interaction with the app."
+    "#### 1. ジョブテンプレート\n",
+    "このテンプレートはジョブをシミュレートするために使用されます。このノートブックでベース値を変更できます。これにより、生成されるサンプルジョブに影響します。このテンプレートは29のジョブのサンプルを生成します。これらのジョブの場所と業界は動的で、アプリとのユーザーの相互作用に依存します。"
    ]
   },
   {
@@ -1709,8 +1705,8 @@
     "name": "example_search"
    },
    "source": [
-    "#### Below are all the categories you could use to simulate distribution points\n",
-    "The app will search through names, categories and alternative categories in order to retrieve the relevant data"
+    "#### 以下は、配送ポイントをシミュレートするために使用できるすべてのカテゴリです\n",
+    "アプリは、関連データを取得するために名前、カテゴリ、代替カテゴリを検索します"
    ]
   },
   {
@@ -1740,9 +1736,9 @@
     "name": "lookup_heading"
    },
    "source": [
-    "### 4. Creating an Industry Lookup\n",
+    "### 4. 業界ルックアップの作成\n",
     "\n",
-    "Depending on the selected industry, the app will 'lookup' specifics in order to retrieve/ filter the right information.  It is also used to generate relevant product categories. In this notebook, more industries can be added."
+    "選択された業界に応じて、アプリは適切な情報を取得/フィルタリングするために詳細を「ルックアップ」します。関連する製品カテゴリを生成するためにも使用されます。このノートブックでは、より多くの業界を追加できます。"
    ]
   },
   {
@@ -1810,7 +1806,7 @@
     "name": "heading_example_jtemplate"
    },
    "source": [
-    "#### Here is an example of how the lookup workes for healthcare for flammable products"
+    "#### 可燃性製品に対するヘルスケアのルックアップの動作例です"
    ]
   },
   {
@@ -1842,12 +1838,12 @@
     "resultHeight": 134
    },
    "source": [
-    "## Streamlit App\n",
+    "## Streamlitアプリ\n",
     "\n",
-    "Now you have setup the functions and standing data tables, you can now have a go at running the streamlit app.  The streamlit application is an example of what a basic route optimization simulator could look like.  Feel free to make any changes as you see fit.\n",
+    "関数と常駐データテーブルを設定したので、streamlitアプリの実行を試すことができます。streamlitアプリケーションは、基本的なルート最適化シミュレーターの外観の例です。適切と思われる変更を自由に行ってください。\n",
     "\n",
-    "- Within Projects / Streamlit you should see a new application\n",
-    "- Click on the app to run the route optimization simulator"
+    "- Projects / Streamlit内に新しいアプリケーションが表示されるはずです\n",
+    "- アプリをクリックしてルート最適化シミュレーターを実行してください"
    ]
   }
  ],
